# 2DParamEaser

./: .gitignore  CMakeLists.txt
.claude/: settings.local.json
.superpowers/brainstorm/735-1781416654/content/: aligned-clear.html  controls-and-storage.html  dimension-types.html  layout-options.html  overview.html  polished-design.html  popover-detail.html  revised-layout.html  your-layout.html
.superpowers/brainstorm/735-1781416654/state/: server-stopped
docs/superpowers/plans/: 2026-06-14-parameaser-implementation.md
docs/superpowers/specs/: 2026-06-14-parameaser-design.md
examples/integration/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/app/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  ParamEditDialog.cpp  ParamEditDialog.h  main.cpp
src/core/: Dimension.cpp  Dimension.h  DxfParser.cpp  DxfParser.h  DxfToSvgRenderer.cpp  DxfToSvgRenderer.h  ProjectManager.cpp  ProjectManager.h  SvgGenerator.cpp  SvgGenerator.h
src/preview/: ParamEaserPreview.cpp  ParamEaserPreview.h
tests/: CMakeLists.txt  test_DxfParser.cpp  test_ProjectManager.cpp  test_SvgGenerator.cpp
